<resources>
    <string name="app_name">Simon Says</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="better_exp">We\'d like to know your name for leaderboard</string>
    <string name="name">Enter Name</string>
    <string name="save_name">Save Name</string>
    <string name="score">Score</string>
    <string name="simon_says">Simon Says</string>
    <string name="hi_there">Hi there</string>
    <string name="start_game">Start Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="_20">0</string>
    <string name="musicTxt">music</string>
    <string name="on">Enable</string>
    <string name="off">Disable</string>
    <string name="about_simon_says">About Simon Says</string>
    <string name="authors">Gal Sar Israel (311504674), Mor Fishman (203699434)</string>
    <string name="gameOverTxt">"Game Over! Your score is "</string>
    <string name="currScoreTxt">"score: "</string>
    <string name="closeGameTxt">Closing game in 2 sec...</string>
    <string name="savedSuccTxt">Saved Successfully</string>
    <string name="hebrewBtnTxt">Hebrew</string>
    <string name="englishBtnTxt">English</string>
    <string name="hi_txt">Hi, </string>
    <string name="greenDsc">Green</string>
    <string name="purpleDsc">Purple</string>
    <string name="redDsc">Red</string>
    <string name="blueDsc">Blue</string>
    <string name="edit_nameDsc">Edit Name</string>
</resources>