<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/View"
	android:background="#112130"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".HomeActivity">

	<com.google.android.material.button.MaterialButton
		android:id="@+id/Green"
		android:layout_width="178dp"
		android:layout_height="180dp"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="32dp"
		app:backgroundTint="#4CAF50"
		app:layout_constraintBottom_toTopOf="@+id/Score"
		app:layout_constraintEnd_toStartOf="@+id/Blue"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		android:contentDescription="@string/greenDsc"/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/Blue"
		android:layout_width="185dp"
		android:layout_height="177dp"
		android:layout_marginEnd="8dp"
		app:backgroundTint="#2196F3"
		app:layout_constraintBottom_toTopOf="@+id/Score"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toEndOf="@+id/Green"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		android:contentDescription="@string/blueDsc"/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/Red"
		android:layout_width="176dp"
		android:layout_height="160dp"
		android:layout_marginStart="8dp"
		app:backgroundTint="#F44336"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/Purple"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/Score"
		app:layout_constraintVertical_bias="1.0"
		android:contentDescription="@string/redDsc"/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/Purple"
		android:layout_width="187dp"
		android:layout_height="160dp"
		android:layout_marginStart="32dp"
		android:layout_marginEnd="8dp"
		app:backgroundTint="#673AB7"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/Red"
		app:layout_constraintTop_toBottomOf="@+id/Score"
		app:layout_constraintVertical_bias="1.0"
		android:contentDescription="@string/purpleDsc"/>

	<TextView
		android:id="@+id/Score"
		android:layout_width="397dp"
		android:layout_height="75dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:paddingTop="20dp"
		android:textSize="22sp"
		android:background="@drawable/score_bg"
		android:text="@string/score"
		android:textAlignment="center"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>