<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:orientation="horizontal">
		<LinearLayout
			android:id="@+id/bg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:background="@drawable/entername_back"
			android:orientation="vertical">
			<TextView
				android:id="@+id/txtTitle"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/enter_your_name"
				android:textSize="25sp"
				android:textColor="#FFFFFF" />
			<TextView
				android:id="@+id/txtSub"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/better_exp"
				android:textSize="14sp"
				android:textColor="#FFFFFF" />
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/input"
				android:layout_width="match_parent"
				android:layout_height="55dp"
				android:layout_marginTop="15dp"
				android:textColorHint="#B5B5B5"
				app:boxStrokeColor="@color/white"
				app:boxStrokeErrorColor="@color/red"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

				<EditText
					android:id="@+id/edtName"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center_vertical"
					android:hint="@string/name"
					android:padding="8dp"
					android:textColor="@color/white"
					android:textColorHint="#424242"
					android:textSize="16sp"
					tools:ignore="SpeakableTextPresentCheck" />
			</com.google.android.material.textfield.TextInputLayout>
			<TextView
				android:id="@+id/btnSave"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="70dp"
				android:layout_marginTop="15dp"
				android:layout_marginBottom="15dp"
				android:padding="8dp"
				android:background="@drawable/btn_start_game"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/save_name"
				android:textSize="25sp"
				android:textColor="#FFFFFF" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
