<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#112130"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="55dp"
			android:padding="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal">
			<LinearLayout
				android:id="@+id/linear5"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:padding="8dp"
				android:orientation="vertical"
				android:layout_weight="1" />
			<ImageView
				android:id="@+id/imgIcon"
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:layout_marginLeft="10dp"
				android:src="@drawable/appicon"
				android:scaleType="centerInside" />
			<TextView
				android:id="@+id/textview2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/simon_says"
				android:textSize="18sp"
				android:textStyle="bold"
				android:textColor="#FFFFFF" />
			<LinearLayout
				android:id="@+id/linear6"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:padding="8dp"
				android:orientation="vertical"
				android:layout_weight="1" />
			<ImageView
				android:id="@+id/imgName"
				android:layout_width="50dp"
				android:layout_height="35dp"
				android:src="@drawable/ic_timer_auto_white"
				android:scaleType="center" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linear3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="vertical"
			android:layout_weight="1">
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textinputlayout1"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
			</com.google.android.material.textfield.TextInputLayout>
			<LinearLayout
				android:id="@+id/linear4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="50dp"
				android:padding="8dp"
				android:gravity="center_horizontal|center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/txtName"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/hi_there"
					android:textSize="25sp"
					android:textColor="#FFFFFF" />
			</LinearLayout>
			<TextView
				android:id="@+id/btnStart"
				android:layout_width="250dp"
				android:layout_height="70dp"
				android:padding="8dp"
				android:background="@drawable/btn_start_game"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/start_game"
				android:textSize="25sp"
				android:textColor="#FFFFFF" />
			<TextView
				android:id="@+id/txtLeaderBoard"
				android:layout_width="250dp"
				android:layout_height="70dp"
				android:layout_marginTop="15dp"
				android:padding="8dp"
				android:background="@drawable/btn_leaderboard"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/leaderboard"
				android:textSize="25sp"
				android:textColor="#FFFFFF" />
			<TextView
				android:id="@+id/txtSettings"
				android:layout_width="250dp"
				android:layout_height="70dp"
				android:layout_marginTop="15dp"
				android:padding="8dp"
				android:background="@drawable/btn_settings"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/settings"
				android:textSize="25sp"
				android:textColor="#FFFFFF" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
